docs: READMEとテスト計画を更新（APIメトリクス要約・KAUCHE注記・在庫/メトリクス検証項目追加）

--- a/出荷指示/202509_test.md
+++ b/出荷指示/202509_test.md
@@ -69,6 +69,9 @@
   - [ ] 出荷指示に一括登録後、出荷管理側 **運用ステータス=出荷依頼済み**
   - [ ] **二重起動ガード**：処理中はボタン disable／終了で復帰
   - [ ] DEBUG=true で媒体別件数サマリと再試行ログを確認
+  - [ ] **WELBOX** の場合は記事欄 1（`記事欄1`）に「WELBOX」を自動入力
+
+（注）KAUCHE は案件管理上の媒体名「おためし」として登録されている場合があります。
 
 ---
 
@@ -206,6 +209,7 @@
   - [ ] `STOCK_BY_CODE.get(code)` の配列から **賞味期限昇順**で割当される
   - [ ] 必要バラ数（数量 × セット入数）ちょうど／不足／複数在庫のケースで期待通りの行が選ばれる
   - [ ] 在庫消費後、`cand.在庫数.value` が差し引かれている
+  - [ ] 必要数が複数在庫に跨る場合、早い賞味期限から順に消費され、各在庫行の `在庫数` が消費量分だけ減算される。
 
 - 媒体固有処理
 
@@ -240,3 +244,25 @@
 
 - [ ] Swal メッセージに「登録 X 件 / 失敗 Y 件」が表示され、媒体別の更新内訳も表示
 - [ ] 出荷指示に想定件数が作成され、サンプル抽出で各フィールド（記事欄 1、倉庫情報、住所/電話補正）が仕様通りである
+
+---
+
+### 5-1. mattRec インデックス化の確認（優先度 A）
+
+- [ ] 各媒体で `getMatt(media, key)` により案件レコードが O(1) 参照できること
+- [ ] `listMattKeysForMedia(media)` により、DEBUG=true の時だけ候補キー一覧が表示されること
+- [ ] DEBUG=false では候補キー一覧が一切出力されないこと
+- [ ] buildMattIndex() が GetMatterRecords の重複除去直後に 1 回だけ呼ばれていること
+
+### 5-2. API メトリクス計測の確認（優先度 A）
+
+- [ ] resParam.message に API 呼び出し件数・所要時間のサマリが 1 行追加されること
+- [ ] getShip / getAll / add / update の各 API 呼び出し回数と処理時間が表示されること
+- [ ] 「API メトリクス」要約行の total（ms）が ship/all/add/upd の合計と大きく乖離しない（± 数百 ms 程度の範囲）
+- [ ] DEBUG=true の場合、媒体別メトリクス（METRICS.byMedia）が console に出力されること
+- [ ] DEBUG=false の場合は詳細メトリクスは出ず、サマリ行だけ残ること
+
+### 5-3. GitHub への反映確認（優先度 C）
+
+- [ ] main ブランチに「feat: mattRec 索引と DEBUG ガード追加、API メトリクス計測対応」が含まれていること
+- [ ] 実行後に対象コードが main ブランチのものと一致していること
