feat: InputControl.js導入・旧SetStyle系削除・README更新（TEMU/WELBOX対応反映）

--- a/新媒体追加時のやること.md
+++ b/新媒体追加時のやること.md
@@ -1,5 +1,7 @@
 # 🧾 HC 新媒体追加時の作業メモ（共通テンプレート）
 
+> 🆕 2025-10-21 更新：売価計算 TEMU/WELBOX 対応版を安定動作版として確定。
+
 ## 📘 概要
 
 本ドキュメントは、HC システム（Kintone / GAS 連携）に **新しい媒体を追加する際の共通手順** を整理したものです。  
@@ -89,6 +91,8 @@
 
 ## 💰 5️⃣ 売価計算アプリ（App ID: 483）
 
+※ 2025-10-21 時点で TEMU / WELBOX の売価計算枠を追加・安定動作確認済。
+
 新媒体に関する価格・利益計算を行うための枠を追加。
 
 ### 手順概要
@@ -149,4 +153,4 @@
 
 ---
 
-**最終更新日:** 2025-10-17
+**最終更新日:** 2025-10-21
