docs: 新媒体追加時のやること.md 更新（InputControl導入・TEMU/WELBOX対応・安定動作版確定）

--- a/新媒体追加時のやること.md
+++ b/新媒体追加時のやること.md
@@ -115,6 +115,12 @@
 | セット利益         | 計算式           | 例：`利益 ÷ セット数`   |
 | 損益分岐点         | 計算式           | 例：`固定費 ÷ 利益率`   |
 
+### 追加情報
+
+- 売価計算アプリに `InputControl.js` を導入し、入力制御を強化しています。
+- 旧来の `SetStyle` 系のスクリプトは廃止し、モダンな入力制御方式に切り替えています。
+- 希望小売価格および仕入れ価格はバラ入力が可能になり、柔軟な価格設定が行えます。
+
 ---
 
 ## 🧪 6️⃣ テスト・確認
@@ -127,6 +133,11 @@
 | 売価計算   | 自動計算・利益率算出の確認           |
 | 媒体マスタ | コード一致／媒体連携確認             |
 | GitHub     | 修正ブランチを main へマージ         |
+
+### 追加情報
+
+- Git 運用ルールおよびリリース手順を遵守し、リリース前には必ずコードレビューと動作確認を実施してください。
+- リリース時はタグ付けを行い、リリースノートを作成して関係者へ共有してください。
 
 ---
 
