--- a/新媒体追加時のやること.md
+++ b/新媒体追加時のやること.md
@@ -57,6 +57,11 @@
 | 5    | デバッグ実行 (`ApplicationBatch_Main()`) でデータ取込を確認           |
 | 6    | 正常動作後、`DEBUG` フラグを OFF にして GitHub に push                |
 
+7. 発注数管理（App ID: 594）およびセット数管理（App ID: 501）との連携確認
+   - `updateAllRecordsSafe()` を使用し、100 件単位で更新を行う
+   - `id` 未定義エラー防止ロジック（存在チェック）を追加
+   - `console.log` で各アプリの取得件数を確認（例：出荷管理 [], 発注数管理 (992), セット数管理 (1465)）
+
 ---
 
 ## 📦 3️⃣ 出荷管理アプリ（媒体別）
@@ -72,6 +77,10 @@
 | 出荷依頼取込     | GAS 経由で受信したデータを登録                           |
 | 消込 CSV 出力    | 出力後、「運用ステータス」を `消込データ出力済み` に更新 |
 | ファイル名ルール | `yyyyMMdd_媒体名_消込用_配送業者.csv`                    |
+
+> 🆕 追加情報（2025-10-23 更新）  
+> BEAUTH 版では Kintone API 認証トークンを利用し、100 件単位でのレコード更新・安全化を実装済み。  
+> 既存の出荷管理アプリにも順次適用予定。
 
 ---
 
@@ -143,15 +152,17 @@
 
 ## ✅ 完了チェックリスト
 
-| チェック項目           | 状況 |
-| ---------------------- | ---- |
-| 掲載媒体マスタへ登録   | ☐    |
-| GAS の媒体定義追加     | ☐    |
-| 出荷管理アプリ作成     | ☐    |
-| 出荷指示アプリ修正     | ☐    |
-| 売価計算フィールド追加 | ☐    |
-| テスト・検証完了       | ☐    |
-| README 更新／履歴残し  | ☐    |
+| チェック項目                  | 状況 |
+| ----------------------------- | ---- |
+| 掲載媒体マスタへ登録          | ☐    |
+| GAS の媒体定義追加            | ☐    |
+| 出荷管理アプリ作成            | ☐    |
+| 出荷指示アプリ修正            | ☐    |
+| 売価計算フィールド追加        | ☐    |
+| 発注数／セット数連携確認      | ☐    |
+| 100 件単位更新・id 安全化確認 | ☐    |
+| テスト・検証完了              | ☐    |
+| README 更新／履歴残し         | ☐    |
 
 ---
 
