2025-10-28: Temu対応構築・共通ファイル導入・掲載依頼README更新

--- a/新媒体追加時のやること.md
+++ b/新媒体追加時のやること.md
@@ -26,6 +26,41 @@
 
 ---
 
+## 🧩 共通設定ファイル（HC_MALLS_CONFIG.js）
+
+新媒体を追加する際には、各アプリで媒体共通設定を参照できるようにするため、  
+Kintone のカスタマイズ設定に「HC_MALLS_CONFIG.js」を最初に読み込む。
+
+### 📄 ファイル内容（例）
+
+```js
+// HC_MALLS_CONFIG.js
+window.HC_MALLS_CONFIG = {
+  au: { fieldPrefix: 'au', hasCost: false, hasProfit: true },
+  リロ: { fieldPrefix: 'リロ', hasCost: true, hasProfit: true },
+  eecoto: { fieldPrefix: 'eecoto', hasCost: false, hasProfit: true },
+  temu: { fieldPrefix: 'temu', hasCost: false, hasProfit: true }, // 新媒体 Temu
+};
+```
+
+### 🧭 登録手順
+
+1. 各アプリ（売価計算・掲載依頼・出荷指示など）の  
+   「JavaScript/CSS でカスタマイズ」設定画面を開く。
+2. JavaScript ファイルの一番上（最初）に `HC_MALLS_CONFIG.js` を追加。
+3. 続けて、`CommonUtils.js`、アプリ固有の JS（例：`02_1_CreateRecodes_250423.js`）を追加。
+4. 順序を必ず守ること（読み込み順が逆だと `HC_MALLS_CONFIG` が未定義エラーになる）。
+
+### ⚙️ 利用イメージ
+
+```js
+const temuConfig = window.HC_MALLS_CONFIG.temu;
+console.log(temuConfig.fieldPrefix); // "temu"
+```
+
+> 各スクリプトで共通の媒体設定を一元管理できるため、  
+> 新媒体追加時はこのファイルに設定を追記するだけで全アプリへ即反映可能。
+
 ## 🗂 1️⃣ 掲載媒体マスタ登録
 
 - アプリ ID：`520`
@@ -147,6 +182,53 @@
 
 - Git 運用ルールおよびリリース手順を遵守し、リリース前には必ずコードレビューと動作確認を実施してください。
 - リリース時はタグ付けを行い、リリースノートを作成して関係者へ共有してください。
+
+---
+
+## 📄 7️⃣ 掲載依頼アプリ対応（App ID: 537）
+
+新媒体を追加した際は、掲載依頼アプリにも媒体ごとのフィールドを作成し、  
+売価計算アプリとのデータ連携を行えるようにする。
+
+---
+
+### 📋 追加対象フィールド（媒体ごとに作成）
+
+| 種別             | フィールド名       | フィールドコード   | 備考                                   |
+| ---------------- | ------------------ | ------------------ | -------------------------------------- |
+| チェックボックス | 案件採用（新媒体） | 案件採用\_〇〇     | 売価計算側の「採用」フラグと同期       |
+| 数値             | 売価（税抜）       | 売価*税抜*〇〇     | 売価計算アプリの値を受け取る           |
+| 数値             | 納価（税抜）       | 納価*税抜*〇〇     | 必要に応じて追加（納価がある媒体のみ） |
+| 数値             | HC 利益率          | HC 利益率\_〇〇    | 売価計算で算出した利益率を保持         |
+| テキスト（1 行） | 掲載商品名         | 掲載商品名\_その他 | Temu など媒体固有名が異なる場合に利用  |
+| ルックアップ     | 掲載依頼 ID        | レコード番号       | 各案件の主キーとして参照される         |
+
+---
+
+### ⚙️ 連携設定
+
+- 売価計算 → 掲載依頼 間のデータ連携スクリプト：
+  - `CreateRecodeToPostingRequest_250703.js`
+    - 新媒体用のマッピングを追加（例：`案件採用_TEMU`, `売価_税抜_temu`）
+  - フィールドコードは **売価計算アプリと一致** させること。
+
+---
+
+### 🧩 連携確認ポイント
+
+| 確認項目                       | 内容                                     |
+| ------------------------------ | ---------------------------------------- |
+| 掲載依頼レコード発行時         | 新媒体用フィールドに値が反映されること   |
+| 採用フラグ                     | 売価計算アプリと双方向で整合が取れること |
+| 発注書・請求書・案件発行フロー | 既存媒体と同様に動作すること             |
+
+---
+
+> 📘 **補足**
+>
+> - 媒体追加時に掲載依頼のスクリプト（例：`02_1_CreateRecodes_250423.js`）へもフィールド対応を追加。
+> - Temu など「掲載商品名\_その他」を使う媒体は、`applyMallSpecificRules()` で個別処理。
+> - 一度設定すれば、次回以降の媒体追加時は同パターンで流用可能。
 
 ---
 
